final options css

--- a/options.html
+++ b/options.html
@@ -28,16 +28,16 @@
 			</label>
 			
 			<h2>Pinned tabs</h2>
-			<div>
-				<label>
-					<input type="radio" name="pinned-save" value="skip">
-					<span>Don't save pinned tabs</span>
-				</label>
-				<label>
-					<input type="radio" name="pinned-save" value="strip">
-					<span>Save pinned tabs as normal tabs</span>
-				</label>
-			</div>
+			<label>
+				<input type="radio" name="pinned-save" value="skip">
+				<span>Don't save pinned tabs</span>
+			</label>
+			<label>
+				<input type="radio" name="pinned-save" value="strip">
+				<span>Save pinned tabs as normal tabs</span>
+			</label>
+			
+			<label></label>
 			
 			<label>
 				<input type="checkbox" id="pinned-noreplace">
