--- a/popup.html
+++ b/popup.html
@@ -20,15 +20,11 @@
 				</div>
 			</fieldset>
 			
-			<fieldset id="main-changelog">
+			<!-- <fieldset id="main-changelog">
 				<p>Session Manager has been updated!</p>
 				
-				<ul>
-					<li>Retina support!
-					<li>Omnibox fixes.
-					<li>Misc fixes.
-				</ul>
-			</fieldset>
+				<ul></ul>
+			</fieldset> -->
 		</div>
 		
 		<fieldset id="import"><legend>Import</legend>
